--- a/_data/uppgifter.yml
+++ b/_data/uppgifter.yml
@@ -1,5 +1,6 @@
 - year: 2022
   kval-uppg: '/pdf/kval-2022.pdf'
+  final-uppg: '/pdf/final-2022.pdf'
 - year: 2021
   kval-uppg: '/pdf/kval-2021.pdf'
   final-uppg: '/pdf/final-2021.pdf'
