--- a/_data/uppgifter.yml
+++ b/_data/uppgifter.yml
@@ -1,3 +1,6 @@
+- year: 2024
+  kval-uppg: '/pdf/kval-2024.pdf'
+  kval-facit: '/pdf/kval-2024-facit.pdf'
 - year: 2023
   kval-uppg: '/pdf/kval-2023.pdf'
   kval-facit: '/pdf/kval-2023-facit.pdf'
