Korrigerade finaldokument för 2022

--- a/_data/uppgifter.yml
+++ b/_data/uppgifter.yml
@@ -10,6 +10,7 @@
   kval-uppg: '/pdf/kval-2022.pdf'
   kval-facit: '/pdf/kval-2022-facit.pdf'
   final-uppg: '/pdf/final-2022.pdf'
+  final-facit: '/pdf/final-2022-facit.pdf'
 - year: 2021
   kval-uppg: '/pdf/kval-2021.pdf'
   kval-facit: '/pdf/kval-2021-facit.pdf'
