--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Lingolympiaden
 email: lingo@lingolympiad.org
 baseurl: ""
-url: "http://www.lingolympiad.org"
+url: "https://www.lingolympiad.org"
 
 # Build settings
 markdown: kramdown
