--- a/_data/uppgifter.yml
+++ b/_data/uppgifter.yml
@@ -2,6 +2,7 @@
   kval-uppg: '/pdf/kval-2024.pdf'
   kval-facit: '/pdf/kval-2024-facit.pdf'
   final-uppg: '/pdf/final-2024.pdf'
+  final-facit: '/pdf/final-2024-facit.pdf'
 - year: 2023
   kval-uppg: '/pdf/kval-2023.pdf'
   kval-facit: '/pdf/kval-2023-facit.pdf'
