--- a/_data/uppgifter.yml
+++ b/_data/uppgifter.yml
@@ -1,3 +1,6 @@
+- year: 2025
+  kval-uppg: '/pdf/kval-2025.pdf'
+  kval-facit: '/pdf/kval-2025-facit.pdf'
 - year: 2024
   kval-uppg: '/pdf/kval-2024.pdf'
   kval-facit: '/pdf/kval-2024-facit.pdf'
