Små uppdateringar på förstasidan, ny sida om Lingos historia och om Lingolägret

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,11 @@
   link: /nyheter/
 - name: "Vanliga frågor"
   link: /faq/
+- name: "Lingoläger"
+  link: /lager/
 - name: "Övningsuppgifter"
   link: /ovning/
+- name: "Historik"
+  link: /tidigare
 - name: "Kontakt"
   link: /kontakt/
